Update with actual shortened URL

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@ curl -X POST -H "Content-Type: application/json" -d '{"url": "https://google.com
 
 <strong>Output</strong>
 {
-    "$id": "rkmiLDldf",
-    "$url": "https://google.com"
+    "id": "rJQ8vcg_z",
+    "url": "https://google.com"
 }
 
 
 
-Visiting <strong>https://chrismaguilar.com/url-shortener/api/rkmiLDldf</strong> will redirect you to <strong>https://google.com</strong>
+Visiting <strong>https://chrismaguilar.com/url-shortener/api/rJQ8vcg_z</strong> will redirect you to <strong>https://google.com</strong>
     </pre>
 </body>
 
